--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,26 @@
     <description>Kameleoon Trial Task</description>
     <packaging>pom</packaging>
 
+    <modules>
+        <module>backend-service</module>
+    </modules>
+
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <java.version>11</java.version>
+
+        <modelmapper.version>3.1.0</modelmapper.version>
     </properties>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.modelmapper</groupId>
+                <artifactId>modelmapper</artifactId>
+                <version>${modelmapper.version}</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
